# simple-recipes-cookbook

./: .gitignore  .mise.toml  404.html  CNAME  CODE_OF_CONDUCT.md  IMAGE.md  README.md  TEMPLATE.md  book.toml  dprint.json  index.html  pyproject.toml  retype.yml  robots.txt  scraper.py
.github/: dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: 1-new-recipe-nb.yml  2-new-recipe-en.yml  2-prov-lykken-nb.yml  3-recipe-request.md  5-new-recipe-en.yml  6-feeling-lucky-en.yml  recipe-request.md
.github/workflows/: dprint-check-push.yml  dprint-check.yml  issue2pr-en.yml  issue2pr.yml  labeler.yml  release-draafter.yml  release-drafter.yml  retype-action.yml  url2pr.yml
.mise/tasks/: fix  thumbnail
_includes/: head.html
bakst/appelsinboller/: index.html
bakst/bananbrod/: index.html
bakst/bananpannekaker/: index.html
bakst/eltefritt-brod/: index.html
bakst/hjemmelaga-safarikjeks/: index.html
bakst/lussekatter/: index.html
bakst/tante-wallys-hveteboller/: index.html
blog/: feed.xml  index.html
blog/2021-12-24-again/: index.html
blog/2022-5-24-hvordan-bidra/: index.html
blog/hello/: index.html
categories/: index.html
categories/bakst/: index.html
categories/bolle/: index.html
categories/brød/: index.html
categories/dessert/: index.html
categories/drikke/: index.html
categories/eirik-rolland-enger/: index.html
dessert/: index.html
easy-serving/: index.html
enkel-servering/: index.html
special/: index.html
src/: index.md  main.md  main.sh  special.md
static/: custom.css
tags/: index.html
(+335 files in other folders)
