[project]
name = "simple-recipes-cookbook"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "engeir", email = "engeir@pm.me" }
]
dependencies = [
    "recipe-scrapers>=14.56.0",
    "icecream>=2.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/simple_recipes_cookbook"]
